--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 body {
   background-color: #0b2434;
-  padding: 20px;
   font-family: 'Karla', sans-serif;
   font-weight: 700;
+  padding: 20px;
   text-align: center;
 }
 main {
-  height: 400px;
-  max-width: 800px;
+  align-items: center;
   background-color: whitesmoke;
-  padding: 1rem;
-  margin-inline: auto;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  height: 400px;
   justify-content: space-evenly;
-  align-items: center;
+  margin-inline: auto;
+  max-width: 800px;
+  overflow: auto;
+  padding: 1rem;
 }
 h1 {
   font-size: 40px;
@@ -28,35 +29,35 @@ p {
 }
 .die-container {
   display: grid;
-  grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  grid-template: auto auto / repeat(5, 1fr);
   margin-bottom: 40px;
 }
 .die-face {
-  grid-row: span 1;
-  border-radius: 10px;
-  height: 50px;
-  width: 50px;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  cursor: pointer;
+  border-radius: 10px;
   box-shadow: 0px 3.57447px 3.57447px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  display: flex;
+  grid-row: span 1;
+  height: 50px;
+  justify-content: center;
+  width: 50px;
 }
 .die-num {
   font-size: 2em;
   font-weight: lighter;
 }
 .roll-dice {
-  height: 50px;
-  width: 100px;
+  background-color: #5035FF;
   border: none;
   border-radius: 6px;
-  background-color: #5035FF;
+  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.18);
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
-  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.18);
+  height: 50px;
+  width: 100px;
 }
 .roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
